# Ledgrr

./: .gitignore  Anchor.toml  GETTING_STARTED.md  README.md  package-lock.json  package.json
app/dashboard/: next.config.js  package.json
app/dashboard/app/: layout.tsx  page.tsx
app/dashboard/components/: Dashboard.tsx  LandingHero.tsx
app/dashboard/hooks/: useFacilitator.ts
app/dashboard/lib/: anchor-client.ts  network-client.ts  privy-config.ts
app/facilitator/: .env.example  package.json  tsconfig.json
app/facilitator/src/: config.ts  helius-webhook.ts  index.ts  logger.ts  metrics.ts  payment-handler.ts  routes.ts  solana-client.ts  x402_network_idl.json
app/merchant-demo/: .env.example  package-lock.json  package.json
app/merchant-demo/src/: client.ts  server.ts
app/sdk/: package.json
app/sdk/src/: client.ts  index.ts  middleware.ts  types.ts
programs/x402-network/: Cargo.toml
programs/x402-network/src/: lib.rs
scripts/: initialize-network.ts  register-facilitator.ts  setup-devnet.ts
tests/: facilitator.test.ts
