[package]
name = "x402-network"
version = "0.1.0"
description = "DePIN facilitator staking + fee distribution for x402 micropayment network"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "x402_network"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.0", features = ["token", "associated_token"] }
